--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -37,3 +37,13 @@ body {
   .logo-image img {
     max-width: 100%;
   }
+
+  footer {
+    background-color: #777;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
+  }
